--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -42,10 +42,6 @@
   overflow-y: hidden;
 }
 
-p {
-  text-align: justify;
-}
-
 .disqus-container {
   text-align: right;
   margin: 20px 0;
@@ -69,4 +65,38 @@ p {
 
 .blurred {
   filter: blur(5px);
+}
+
+@keyframes rgbAnimation {
+  0% {
+    color: rgb(255, 0, 0); /* Red */
+    text-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+  }
+  33% {
+    color: rgb(0, 255, 0); /* Green */
+    text-shadow: 0 0 10px rgba(0, 255, 0, 0.7);
+  }
+  66% {
+    color: rgb(0, 0, 255); /* Blue */
+    text-shadow: 0 0 10px rgba(0, 0, 255, 0.7);
+  }
+  100% {
+    color: rgb(255, 0, 0); /* Red */
+    text-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+  }
+}
+
+.hero__title {
+  animation: rgbAnimation 2s infinite;
+  font-family: 'Comic Sans MS', cursive, sans-serif; /* Solo es por el meme XD */
+  font-size: 4em;
+  font-weight: bold; 
+  text-align: center; 
+  margin: 20px 0
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
