--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -94,8 +94,8 @@
 
 .exercise {
   /* LaTeX style */
-  font-family: "KaTeX_Main";
-  font-size: 1.2em;  
+  font-family: "Latin Modern", serif;
+  font-size: 1.3em;  
   margin-bottom: 15px;
 }
 
